--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Prezenter
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
+    = yield :css
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
