favicon_link_tag

--- a/app/views/layouts/prezenter.html.haml
+++ b/app/views/layouts/prezenter.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Prezenter
+    = favicon_link_tag
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     %style= yield :css
     = javascript_include_tag "application", "data-turbolinks-track" => true
