--- a/app/views/layouts/prezenter.html.haml
+++ b/app/views/layouts/prezenter.html.haml
@@ -3,8 +3,8 @@
   %head
     %title Prezenter
     = favicon_link_tag
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
+    = stylesheet_link_tag    "application", media: "all"
     %style= yield :css
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = javascript_include_tag "application"
   %body
     = yield
