display proper buttons for viewer & prezenter

--- a/app/views/presentations/index.html.haml
+++ b/app/views/presentations/index.html.haml
@@ -14,10 +14,11 @@
             %h3 #{presentation.name} by #{presentation.username}
           %ul.button-group
             %li.quarter
-              %a.button{href: "/presentations/#{presentation.id}/prezent"} Prezent
-            %li.quarter
               %a.button.success{href: "/presentations/#{presentation.id}/view"} View
-            %li.quarter
-              = link_to 'Edit', edit_presentation_path(presentation), class: 'button secondary'
-            %li.quarter
-              = link_to 'Remove', presentation, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button alert'
+            - if current_user && current_user.login == presentation.username
+              %li.quarter
+                %a.button{href: "/presentations/#{presentation.id}/prezent"} Prezent
+              %li.quarter
+                = link_to 'Edit', edit_presentation_path(presentation), class: 'button secondary'
+              %li.quarter
+                = link_to 'Remove', presentation, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button alert'
