--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,5 +1,7 @@
 %header.navbar.navbar-default.navbar-fixed-top
   .container
+    .navbar-header
+      %strong= link_to 'Prezenter', root_path, class: 'navbar-brand'
     %nav
       %ul.nav.navbar-nav
         - if current_user
