--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,16 @@
 %h2 Zarejestruj
 
 .signup-form
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-    .field
-      = f.label :login, 'Login'
-      = f.text_field :login, :autofocus => true
+  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: 'form-inline'}) do |f|
+    .form-group
+      = f.text_field :login, placeholder: 'Login', :autofocus => true, class: 'form-control'
 
-    .field
-      = f.label :password, 'Hasło'
-      = f.password_field :password
+    .form-group
+      = f.password_field :password, placeholder: 'Hasło', class: 'form-control'
 
-    .field
-      = f.label :password_confirmation, 'Potwierdzenie hasła'
-      = f.password_field :password_confirmation
+    .form-group
+      = f.password_field :password_confirmation, placeholder: 'Potwierdzenie hasła', class: 'form-control'
 
-    .action
+    .btn-group
       = f.submit 'Zarejestruj', class: 'btn btn-primary'
-
-= render "devise/shared/links"
+      = link_to 'Zaloguj', new_session_path(resource_name), class: 'btn btn-default'
