--- a/app/assets/stylesheets/prezenter.css.scss
+++ b/app/assets/stylesheets/prezenter.css.scss
@@ -16,5 +16,16 @@ section {
 }
 
 .top {
-  z-index: 1000;
+  z-index: 1;
+}
+
+.navigation {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+
+  .menu {
+    padding: 10px 20px;
+  }
 }
