--- a/app/views/viewer/show.html.haml
+++ b/app/views/viewer/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :css do
-  = @presentation.css
+  = raw @presentation.css
 
 #wrapper{'data-mode' => 'viewer'}
   = raw Haml::Engine.new(@presentation.haml).render
