--- a/app/views/prezenter/show.html.haml
+++ b/app/views/prezenter/show.html.haml
@@ -11,8 +11,8 @@
   .menu
     = link_to fa_icon('home 4x'), root_path
 
-.info
-  #progress
-    .bar
+.infobar
   #clock
+    .bar
+  #progress
     .bar
